# lab3.4_graphs

./: CMakeLists.txt  README.md  main.cpp
Structures/: Digraph.h  Graph.h  NonDigraph.h
Tests/: TestDiGraph.h  TestNonDiGraph.h  Tests.h
UI/: Menu.h  Preset.h
Utility/: Actions.h  Handlers.h
